--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_PUBLIC_FOLDER = http://localhost:8800/images/
-REACT_APP_BACKEND_URL = http://localhost:8800/api
+REACT_APP_BACKEND_URL = https://backendconnect.netlify.app
