--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_PUBLIC_FOLDER = http://localhost:8800/images/
-REACT_APP_BACKEND_URL = https://backendconnect.netlify.app
+REACT_APP_PUBLIC_FOLDER = ttps://genuine-figolla-b17dbf.netlify.app/.netlify/functions/api/images
+REACT_APP_BACKEND_URL = https://genuine-figolla-b17dbf.netlify.app/.netlify/functions/api/api
